:bug: fix z-index

--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -270,7 +270,7 @@
       object-position: center;
       border-radius: 50%;
       position: absolute;
-      z-index: 4;
+      z-index: 3;
       @include center-absolute;
       @media #{$x-sm} {
         height: 75px;
@@ -328,6 +328,7 @@
       font-weight: bold;
       margin-bottom: 13px;
       line-height: 100%;
+      z-index: 2;
 
       &.noMargin {
         margin-bottom: 0;
